# android_vendor_amlogic_common_ASPlayer

./: .gitattributes  .gitignore  README.md  release_sdk.bat
apps/ASPlayerDemo/: Android.bp  build.gradle  com.amlogic.asplayer.demo.xml
apps/ASPlayerDemo/src/jniasplayer_framework/: AndroidManifest.xml
apps/ASPlayerDemo/src/main/: AndroidManifest.xml
apps/ASPlayerDemo/src/main/res/layout/: activity_live_pip_tv_player.xml  activity_live_pip_tv_player_setting.xml  activity_live_tv_player.xml  activity_live_tv_player_setting.xml  activity_local_tv_player.xml  activity_main.xml  activity_tv_player_setting.xml  layout_asplayer_setting.xml
apps/ASPlayerDemo/src/main/res/values-night/: themes.xml
apps/ASPlayerDemo/src/main/res/values-zh-rCN/: strings.xml
libs/: Android.bp
libs/ASPlayer-library/: .gitignore  Android.bp  BuildConfiguration.java.in  asplayerSharelibAndGitInfo.go  build.gradle  droidlogic.jasplayer.xml  proguard-rules.pro
libs/ASPlayer-library/src/main/: AndroidManifest.xml
libs/JNI-ASPlayer-library/: Android.bp  CMakeLists.txt  CleanSpec.mk  build.gradle  droidlogic.jniasplayer.xml  jniasplayerSharelibAndGitInfo.go
libs/JNI-ASPlayer-library/src/main/: AndroidManifest.xml
libs/JNI-ASPlayer-library/src/main/java/com/amlogic/jniasplayer/: JniASPlayer.java  JniPlaybackListener.java
libs/JNI-ASPlayer-library/src/main/jni/: JNIASPlayer.cpp  JniASPlayerJNI.cpp  JniASPlayerJNI.h  JniBundle.cpp  JniBundle.h  JniMediaFormat.cpp  JniMediaFormat.h  JniPlaybackListener.cpp  JniPlaybackListener.h  NativeHelper.cpp  NativeHelper.h  config.h  native-lib.cpp
libs/JNI-ASPlayer-library/src/main/jni/common/: log.h
libs/JNI-ASPlayer-library/src/main/jni/include/: JNIASPlayer.h
projects/modules/: .gitignore  Android.bp  build.gradle  build_sdk.bat  config.gradle  gradle.properties  settings.gradle
projects/modules/gradle/wrapper/: gradle-wrapper.properties
projects/modules/keystore/: platform_aosp.keystore
version/: VERSION
(+139 files in other folders)
